Name:                GoHaskell
Version:             0.0
Description:         Go game in haskell
License:             MIT
License-file:        LICENSE
Author:              Vitaly Turinsky
Maintainer:          vitaly.turinsky@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.14

Executable GoHaskell
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5,
                     containers >= 0.4.2.1,
                     data-lens-template >= 2.1.7,
                     data-lens >= 2.10.2
--                     wx >= 0.13.2.3
  Default-language:  Haskell2010
  Ghc-options:       -Wall
-- -optl-mwindows -package wx
