Name:                GoHaskell
Version:             0.1
Description:         Go game in haskell
License:             MIT
License-file:        LICENSE
Author:              Vitaly Turinsky
Maintainer:          vitaly.turinsky@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.14

Executable GoHaskell
  Main-is:           Main.hs
  Build-Depends:     base >= 4,
                     containers >= 0.4.2,
                     mtl >= 2.1,
                     data-lens-template >= 2.1,
                     data-lens >= 2.10,
                     network >= 2.3,
                     gtk >= 0.12,
                     cairo >= 0.12
  Default-language:  Haskell2010
  Ghc-options:       -Wall -threaded
-- -optl-mwindows    (the standard input/output/error for Windows GUI programs is not connected, never use the standard input/output/error)
